--- a/goSellSDK/UI/Resources/Localization/ar.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/ar.lproj/Localizable.strings
@@ -7,70 +7,70 @@
 
 // MARK: Pay Button Titles
 
-"btn_pay_title_generic"	= "PAY";
-"btn_pay_title_amount"	= "PAY %@";
+"btn_pay_title_generic"	= "ادفع";
+"btn_pay_title_amount"	= "ادفع %@";
 
 // MARK: Payment Option Group Titles
 
-"payment_options_group_title_recent" = "RECENT";
-"payment_options_group_title_others" = "OTHERS";
+"payment_options_group_title_recent" = "مستخدم حديثاً";//check
+"payment_options_group_title_others" = "آخر";//check
 
 // MARK: Card Input Fields Placeholders
 
-"card_input_card_number_placeholder" 		= "Card Number";
-"card_input_expiration_date_placeholder" 	= "MM/YY";
-"card_input_cvv_placeholder" 				= "CVV";
-"card_input_cardholder_name_placeholder"	= "Name On Card";
-"card_input_address_on_card_placeholder"	= "Address on Card";
+"card_input_card_number_placeholder" 		= "رقم البطاقة";
+"card_input_expiration_date_placeholder" 	= "شش/سس"; //check
+"card_input_cvv_placeholder" 				= "الرمز الأمني";
+"card_input_cardholder_name_placeholder"	= "الاسم الموجود على البطاقة";
+"card_input_address_on_card_placeholder"	= "عنوان الدفع";//check عنوان البطاقة
 
 // MARK: Save Card Placeholders
 
-"save_card_promotion_text" = "For faster and more secure checkout, please save your card";
+"save_card_promotion_text" = "لدفع آمن و سريع، قم بحفظ بطاقتك";
 
 // MARK: Screen Titles
 
-"currency_selection_screen_title" 	= "Select Currency";
-"card_scanning_screen_title"		= "Scanning Card";
+"currency_selection_screen_title" 	= "اختر العملة";
+"card_scanning_screen_title"		= "تصوير البطاقة";//check
 
 // MARK: Search Bar
 
-"search_bar_placeholder" = "Search";
+"search_bar_placeholder" = "بحث";
 
 // MARK: OTP Screen
 
-"otp_guide_text"	= "Please enter the OTP that has been sent to %@";
-"btn_confirm_title"	= "CONFIRM";
-"btn_resend_title"	= "RESEND";
+"otp_guide_text"	= "الرجاء إدخال الرقم المرسل إلى %@";//check
+"btn_confirm_title"	= "تأكيد";
+"btn_resend_title"	= "إعادة إرسال";
 
 
 // MARK: -
 // MARK: Alert: Delete Card
 
-"alert_delete_card_title" 				= "Delete Card";
-"alert_delete_card_message" 			= "Are you sure you would like to delete card %@?";
-"alert_delete_card_btn_cancel_title"	= "Cancel";
-"alert_delete_card_btn_delete_title" 	= "Delete";
+"alert_delete_card_title" 				= "حذف البطاقة";
+"alert_delete_card_message" 			= "هل أنت متأكد من حذف البطاقة %@?";
+"alert_delete_card_btn_cancel_title"	= "إلغاء";
+"alert_delete_card_btn_delete_title" 	= "حذف";
 
 // MARK: Alert: Extra Charges
 
-"alert_extra_charges_title" 			= "Confirm Extra Charges";
-"alert_extra_charges_message" 			= "You will be charged an additional fee of %@ for this type of payment, totalling an amount of %@";
-"alert_extra_charges_btn_cancel_title" 	= "Cancel";
-"alert_extra_charges_btn_confirm_title"	= "Confirm";
+"alert_extra_charges_title" 			= "تأكيد الرسوم الإضافية";
+"alert_extra_charges_message" 			= "سوف تتم إضافة  %@ لهذا النوع العملية، إجمالي المبلغ المطلوب   %@";
+"alert_extra_charges_btn_cancel_title" 	= "إلغاء";
+"alert_extra_charges_btn_confirm_title"	= "تأكيد";
 
 // MARK: Alert: Cancel Payment (status undefined)
 
-"alert_cancel_payment_status_undefined_title" 				= "Cancel Payment";
-"alert_cancel_payment_status_undefined_message"				= "Would you like to cancel payment? Payment status will be undefined.";
-"alert_cancel_payment_status_undefined_btn_no_title"		= "No";
-"alert_cancel_payment_status_undefined_btn_confirm_title"	= "Confirm";
+"alert_cancel_payment_status_undefined_title" 				= "إلغاء عملية الدفع";
+"alert_cancel_payment_status_undefined_message"				= "هل تود إلغاء عملية الدفع؟ حالة العملية ستصبح غير معرّفة";
+"alert_cancel_payment_status_undefined_btn_no_title"		= "لا";
+"alert_cancel_payment_status_undefined_btn_confirm_title"	= "تأكيد";
 
 // MARK: Alert: Cancel Payment (just cancel)
 
-"alert_cancel_payment_title" 				= "Cancel Payment";
-"alert_cancel_payment_message" 				= "Would you like to cancel payment?";
-"alert_cancel_payment_btn_no_title" 		= "No";
-"alert_cancel_payment_btn_confirm_title"	= "Confirm";
+"alert_cancel_payment_title" 				= "إلغاء عملية الدفع";
+"alert_cancel_payment_message" 				= "هل تود إلغاء عملية الدفع؟";
+"alert_cancel_payment_btn_no_title" 		= "لا";
+"alert_cancel_payment_btn_confirm_title"	= "تأكيد";
 
 // MARK: Alert: Error
 
