--- a/goSellSDK/UI/Resources/Localization/en.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/en.lproj/Localizable.strings
@@ -232,3 +232,18 @@
 
 "alert_error_btn_retry_title"	= "Retry";
 "alert_error_btn_dismiss_title"	= "Dismiss";
+
+// MARK: Payment Statuses
+
+"payment_status_initiated" 		= "Initiated";
+"payment_status_in_progress"	= "In Progress";
+"payment_status_abandoned" 		= "Abandoned";
+"payment_status_cancelled" 		= "Cancelled";
+"payment_status_failed" 		= "Failed";
+"payment_status_declined" 		= "Declined";
+"payment_status_restricted" 	= "Restricted";
+"payment_status_captured" 		= "Captured";
+"payment_status_authorized" 	= "Authorized";
+"payment_status_void" 			= "Void";
+
+"payment_status_successful"		= "Successful";
