--- a/goSellSDK/UI/Resources/Localization/ru.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/ru.lproj/Localizable.strings
@@ -244,6 +244,8 @@
 "payment_status_restricted" 	= "Ограничено";
 "payment_status_captured" 		= "Захвачено";
 "payment_status_authorized" 	= "Одобрено";
+"payment_status_unknown"		= "Неизвестно";
 "payment_status_void" 			= "Недействительно";
 
-"payment_status_successful"		= "Успешно";
+"payment_status_alert_successful"	= "Успешно";
+"payment_status_alert_failed"		= "Неуспешно";
