--- a/goSellSDK/UI/Resources/Localization/ru.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/ru.lproj/Localizable.strings
@@ -5,6 +5,11 @@
   Copyright © 2018 Tap Payments. All rights reserved.
 */
 
+// MARK: Common
+
+"common_edit"	= "Изменить";
+"common_cancel"	= "Отмена";
+
 // MARK: Pay Button Titles
 
 "btn_pay_title_generic"	= "ОПЛАТИТЬ";
