--- a/goSellSDK/UI/Resources/Localization/ar.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/ar.lproj/Localizable.strings
@@ -7,8 +7,8 @@
 
 // MARK: Common
 
-"common_edit"	= "Edit";
-"common_cancel"	= "Cancel";
+"common_edit"	= "تعديل";
+"common_cancel"	= "إلغاء";
 
 // MARK: Pay Button Titles
 
