--- a/goSellSDK/UI/Resources/Localization/en.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/en.lproj/Localizable.strings
@@ -15,6 +15,11 @@
 "btn_pay_title_generic"	= "PAY";
 "btn_pay_title_amount"	= "PAY %@";
 
+// MARK: Save Button Title
+
+"btn_save_title" = "SAVE CARD";
+"btn_save_action_title" = "SAVE";
+
 // MARK: Payment Option Group Titles
 
 "payment_options_group_title_recent" = "RECENT";
