--- a/goSellSDK/UI/Resources/Localization/ru.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/ru.lproj/Localizable.strings
@@ -15,6 +15,11 @@
 "btn_pay_title_generic"	= "ОПЛАТИТЬ";
 "btn_pay_title_amount" 	= "ОПЛАТИТЬ %@";
 
+// MARK: Save Button Title
+
+"btn_save_title" = "СОХРАНИТЬ КАРТУ";
+"btn_save_action_title" = "СОХРАНИТЬ";
+
 // MARK: Payment Option Group Titles
 
 "payment_options_group_title_recent" = "НЕДАВНИЕ";
