--- a/goSellSDK/UI/Resources/Localization/ar.lproj/Localizable.strings
+++ b/goSellSDK/UI/Resources/Localization/ar.lproj/Localizable.strings
@@ -41,6 +41,8 @@
 
 "currency_selection_screen_title" 	= "اختر العملة";
 "card_scanning_screen_title"		= "تصوير البطاقة";
+"payment_screen_title_payment"		= "Checkout";
+"payment_screen_title_card_saving"	= "Enter Card Details";
 
 // MARK: Search Bar
 
