--- a/goSellSDK/UI/Internal/Resources/Localization/en.lproj/Localizable.strings
+++ b/goSellSDK/UI/Internal/Resources/Localization/en.lproj/Localizable.strings
@@ -35,7 +35,8 @@
 
 // MARK: Save Card Placeholders
 
-"save_card_promotion_text" = "For faster and more secure checkout, please save your card";
+"save_card_promotion_text"		= "For faster and more secure checkout, please save your card";
+"saved_cards_usage_description"	= "Saved cards will only be used with your approval, you can remove them at any time";
 
 // MARK: Screen Titles
 
