1- Async Close button theme. 2- Adding Async Tap button new type.

--- a/goSellSDK/Core/UI/Internal/Resources/Localization/ar.lproj/Localizable.strings
+++ b/goSellSDK/Core/UI/Internal/Resources/Localization/ar.lproj/Localizable.strings
@@ -20,6 +20,9 @@
 "btn_save_title" = "احفظ البطاقة";
 "btn_save_action_title" = "احفظ البطاقة";
 
+// MARK: Async Button Title
+"btn_async_title" = "تم";
+
 // MARK: Payment Option Group Titles
 
 "payment_options_group_title_recent" = "مستخدم حديثاً";
