1- AsyncEpxiration parser. 2- Async order parser. 3- Showing async charge details into the ui

--- a/goSellSDK/Core/UI/Internal/Resources/Localization/ar.lproj/Localizable.strings
+++ b/goSellSDK/Core/UI/Internal/Resources/Localization/ar.lproj/Localizable.strings
@@ -58,6 +58,16 @@
 "btn_confirm_title"	= "تأكيد";
 "btn_resend_title"	= "إعادة إرسال";
 
+// MARK: Async Screen
+
+"async_status_text"             = "جاري الدفع";
+"async_pay_reference_text"      = "مع كود فوري الخاص بك";
+"async_pay_ack_text"            = "تم إرسال رسالة نصية لـ";
+"async_pay_email_text"          = "تم إرسال بريد إلكتروني لـ";
+"async_pay_order_code_text"     = "كود الطلب";
+"async_pay_code_expire_text"    = "ينتهي الكود في\n"
+"async_pay_hint_footer_text"    = "برجاء زيارة أقرب فرع فوري\nالموجود في الرابط ادناه لاستكمال عملية الدفع";
+
 
 // MARK: -
 // MARK: Alert: Delete Card
