Changed the arrabic localisation for card expiry date placeholder

--- a/goSellSDK/Core/UI/Internal/Resources/Localization/ar.lproj/Localizable.strings
+++ b/goSellSDK/Core/UI/Internal/Resources/Localization/ar.lproj/Localizable.strings
@@ -31,7 +31,7 @@
 // MARK: Card Input Fields Placeholders
 
 "card_input_card_number_placeholder" 		= "رقم البطاقة";
-"card_input_expiration_date_placeholder" 	= "شش/سس";
+"card_input_expiration_date_placeholder" 	= "سنه/ شهر";
 "card_input_cvv_placeholder" 				= "الرمز الأمني";
 "card_input_cardholder_name_placeholder"	= "الاسم الموجود على البطاقة";
 "card_input_address_on_card_placeholder"	= "عنوان الدفع";
